# MinTimeSpiral

./: .gitignore  BuildMex  README.md  RewindedSpiral_Brian.m  RewindedSpiral_Lustig.m
Lib/: createCPPHeader.m  createCPPHeader2.m  plotgradinfo.m  vds.m
Lib/SDC3/: CMakeLists.txt
Lib/SDC3/Sources/: sdc3_MAT.c
Lib/minTimeGradientMex/: CMakeLists.txt  vdSpiralDesign.m
Lib/socp/: CMakeLists.txt
Lib/socp/Sources/: socp_mex.c
